# rustYoutube

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
.github/workflows/: build.yml  ci.yml
locales/: de.yml  en.yml  es.yml  fr.yml  pt-br.yml
src/: auth.rs  deps.rs  i18n.rs  main.rs  player.rs  ui.rs  youtube.rs
