[package]
name = "rustyoutube"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
crossterm = "0.28"
ratatui = "0.26"
tui-textarea = "0.4"
chrono = "0.4"
regex = "1.10"
futures-util = "0.3"

